@@ -1,6 +1,7 @@
 2012-01-25 Riccardo Mottola <rm@gnu.org>
 
 	* Application/UI/FSTableView+Scrolling.m
+	* Application/FSDocument+Quantrix.m
 	Warning fixes.
 
 2012-01-25 Riccardo Mottola <rm@gnu.org>
